<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/gradient_bg">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ThemThongTin"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_mabaihat"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:paddingLeft="20dp"
        android:background="@drawable/border_radius"/>

    <Spinner
        android:id="@+id/insert_macasi"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/MaCaSi"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/insert_tencasi"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:editable="false"
        android:layout_margin="10dp"
        android:hint="@string/TenCaSi"/>

    <EditText
        android:id="@+id/insert_ngaybd"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:inputType="date"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/NgayBieuDien"/>

    <EditText
        android:id="@+id/insert_diadiem"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:hint="@string/DiaDiem"/>

    <android.widget.Button
        android:id="@+id/insert_thongtin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/border_radius"
        android:text="@string/Them"/>

</LinearLayout>