<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ChinhSuaBieuDien"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_edit_mabaihat"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:paddingLeft="20dp"
        android:background="@drawable/border_radius"/>

    <Spinner
        android:id="@+id/edt_macasi"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/MaCaSi"
        android:editable="false"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/edt_tencasi"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:editable="false"
        android:layout_margin="10dp"
        android:hint="@string/TenCaSi"/>

    <EditText
        android:id="@+id/edt_ngaybd"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:inputType="date"
        android:ems="10"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/NgayBieuDien"/>

    <EditText
        android:id="@+id/edt_diadiem"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:background="@drawable/border_radius"
        android:paddingLeft="20dp"
        android:hint="@string/DiaDiem"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius"
            android:text="@string/Sua"/>
    </LinearLayout>


</LinearLayout>