<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:padding="20dp"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ThaoTac"
        android:textSize="25dp"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.widget.Button
            android:id="@+id/btn_select_edit"
            android:layout_width="wrap_content"
            android:background="@drawable/border_radius"
            android:layout_height="wrap_content"
            android:text="@string/Sua"/>

        <android.widget.Button
            android:id="@+id/btn_select_delete"
            android:layout_width="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@drawable/border_radius"
            android:layout_height="wrap_content"
            android:text="@string/Xoa"/>
    </LinearLayout>
</LinearLayout>