<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ThemCaSi"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/add_mcs"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/border_radius"
        android:hint="@string/MaCaSi"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/add_tcs"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/border_radius"
        android:hint="@string/TenCaSi"
        android:paddingLeft="20dp" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgView_cs"
            android:layout_width="1dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txt_cs"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <android.widget.Button
            android:id="@+id/buttonLoadPicture_cs"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_radius"
            android:padding="10dp"
            android:text="Load Picture" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btn_add_cs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/border_radius"
        android:text="@string/Them" />

</LinearLayout>