<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".thongke.ThongKeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chọn thời gian:"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/sp_nam"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/sp_thang"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:background="@drawable/border_th_table"
                android:padding="5dp"
                android:text="@string/MaCaSi"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="66.5dp"
                android:layout_height="50dp"
                android:background="@drawable/border_th_table"
                android:padding="5dp"
                android:text="@string/MaBaiHat"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:background="@drawable/border_th_table"
                android:padding="5dp"
                android:text="@string/TenCaSi"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:background="@drawable/border_th_table"
                android:padding="5dp"
                android:text="@string/NgayBieuDien"
                android:textColor="@color/white"
                android:textSize="18dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_th_table"
                android:padding="5dp"
                android:text="@string/DiaDiem"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_thongke"
            android:layout_width="match_parent"
            android:layout_height="190dp" />

        <android.widget.Button
            android:id="@+id/show_barchart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:onClick="bieuDoBarChart"
            android:text="SHOW DETAIL" />

        <RelativeLayout
            android:id="@+id/bieudo_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" />

    </LinearLayout>

    <include
        layout="@layout/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navmenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/iconmenu" />

</androidx.drawerlayout.widget.DrawerLayout>