<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:minHeight="1000dp"
    android:minWidth="700dp"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/ChinhSuaCaSi"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20sp"
            android:text="@string/MaCaSi"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/up_mcs"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:editable="false"
            android:paddingLeft="20dp"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20sp"
            android:textColor="@color/white"
            android:editable="false"
            android:text="@string/TenCaSi"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/up_tcs"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_radius"
            android:paddingLeft="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgView_up_cs"
            android:layout_width="1dp"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/txt_up_cs"
            android:layout_width="1dp"
            android:layout_height="match_parent" />

        <android.widget.Button
            android:id="@+id/buttonLoadPicture_up_cs"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_radius"
            android:padding="10dp"
            android:text="Load Picture" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btn_up_cs"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/border_radius"
        android:text="@string/Luu" />
</LinearLayout>